--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,17 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 fastapi==0.112.2
+greenlet==3.0.3
 h11==0.14.0
 idna==3.8
+mangum==0.17.0
 psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.34
 starlette==0.38.4
 typing_extensions==4.12.2
 urllib3==2.2.2
